--- a/static/styles.css
+++ b/static/styles.css
@@ -71,6 +71,7 @@ ul { margin: 0; padding: 0; list-style: none; }
 /* margin right */
 .mr1 { margin-right: 0.25rem; }
 .mr2 { margin-right: 0.5rem; }
+.mr3 { margin-right: 1rem; }
 
 /* padding all */
 .pa2 { padding: 0.5rem; }
