--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,8 @@ ul { margin: 0; padding: 0; list-style: none; }
 .mt2 { margin-top: 0.5rem; }
 
 /* margin bottom */
+.mb2 { margin-bottom: 0.5rem; }
+.mb3 { margin-bottom: 1rem; }
 .mb4 { margin-bottom: 2rem; }
 
 /* margin left */
